--- a/mailpilot/src/views/campaigns/new.ejs
+++ b/mailpilot/src/views/campaigns/new.ejs
@@ -1,4 +1,5 @@
-<%- include('../layouts/header') %>
+<% var template = typeof template !== 'undefined' ? template : null; %> <%-
+include('../layouts/header') %>
 
 <div class="p-8 max-w-2xl mx-auto">
   <h1 class="text-2xl font-bold mb-6 text-blue-300">Create New Campaign</h1>
